--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fortawesome/pro-regular-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^10.2.1",
     "date-fns": "^2.21.3",
     "fs-extra": "^10.0.0",
     "next": "10.2.0",
+    "next-mdx-remote": "^3.0.2",
     "react": "17.0.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "17.0.2",
