--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@next/mdx": "^10.2.1",
     "date-fns": "^2.21.3",
     "fs-extra": "^10.0.0",
+    "lodash": "^4.17.21",
     "next": "10.2.0",
     "next-mdx-remote": "^3.0.2",
+    "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "17.0.2",
