--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -20,6 +21,7 @@
     "date-fns": "^2.21.3",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
+    "logform": "^2.2.0",
     "next": "10.2.0",
     "next-mdx-remote": "^3.0.2",
     "ramda": "^0.27.1",
@@ -28,6 +30,11 @@
     "react-dom": "17.0.2",
     "react-transition-group": "^4.4.1",
     "sass": "^1.32.13",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "babel-jest": "^27.0.2",
+    "jest": "^27.0.4"
   }
 }
