--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "logform": "^2.2.0",
     "next": "10.2.0",
     "next-mdx-remote": "^3.0.2",
+    "performance": "^1.4.0",
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.0.0-beta.5",
