--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "performance": "^1.4.0",
     "ramda": "^0.27.1",
     "react": "17.0.2",
+    "react-accessible-accordion": "^3.0.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "17.0.2",
     "react-transition-group": "^4.4.1",
