--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^10.2.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "date-fns": "^2.21.3",
     "formik": "^2.2.5",
@@ -39,6 +40,7 @@
     "sass": "^1.32.13",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
+    "validator": "^13.0.0",
     "winston": "^3.3.3",
     "yup": "^0.32.1"
   },
