--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-accessible-accordion": "^3.0.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^17.0.2",
+    "react-ga": "^2.7.0",
     "react-icons": "^4.1.0",
     "react-transition-group": "^4.4.1",
     "sass": "^1.32.13",
