--- a/pic-chart/templates/ingress-nginx-config.yaml
+++ b/pic-chart/templates/ingress-nginx-config.yaml
@@ -1,13 +1,14 @@
 apiVersion:  networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-svc
+  # name: ingress-svc /* used ingress-resource as this is name used on GKE */
+  name: ingress-resource
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: int.pitchinclub.com
+    - host: {{ .Values.env }}.pitchinclub.com
       http:
         paths: 
         - path: /?(.*)
