--- a/Dockerfile.dev-build
+++ b/Dockerfile.dev-build
@@ -20,4 +20,8 @@ RUN npm install -g npm
 COPY ./  ./ 
 
 # Tell the image what to do when it starts
-CMD ["npm", "run", "dev"]
+RUN npm run build
+
+EXPOSE 3000
+
+CMD ["npm", "run", "start"]
