--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "gensitemap": "node utils/sitemap.mjs",
     "dev": "next dev -p 3000",
     "build": "next build && npm run gensitemap",
+    "build-export": "next build && next export && npm run gensitemap",
     "start": "next start",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest",
+    "node-version": "node -v"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.342.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
@@ -19,16 +22,23 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^10.2.1",
+    "aws-sdk": "^2.1387.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "date-fns": "^2.21.3",
+    "extracted-loader": "^1.0.7",
+    "file-loader": "^6.2.0",
     "formik": "^2.2.5",
     "fs-extra": "^10.0.0",
+    "ignore-loader": "^0.1.2",
+    "img-loader": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
     "logform": "^2.2.0",
-    "next": "^11.0.1",
+    "next": "12",
+    "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.2",
+    "next-optimized-images": "^2.6.2",
     "performance": "^1.4.0",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
@@ -39,14 +49,21 @@
     "react-icons": "^4.1.0",
     "react-transition-group": "^4.4.1",
     "sass": "^1.32.13",
+    "sharp": "^0.32.1",
     "styled-components": "^5.2.1",
+    "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
     "validator": "^13.0.0",
     "winston": "^3.3.3",
+    "yargs": "^17.7.2",
     "yup": "^0.32.1"
   },
   "devDependencies": {
     "babel-jest": "^27.0.2",
-    "jest": "^27.0.4"
+    "jest": "^27.0.4",
+    "shelljs": "^0.8.5"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
